# SpuCo

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  bFFHQ_demo.ipynb  bffhq_demo.ipynb  environment.yml  pyproject.toml  setup.cfg  spuco.code-workspace  spuco_sun_demo.ipynb  urban_cars_demo.ipynb  waterbirds_erm.py
docs/source/: conf.py  index.rst
examples/: README.md
quickstart/: explore_data.ipynb  guild.txt  spuco_mnist_erm.ipynb  spuco_mnist_groupdro.ipynb  spuco_mnist_jtt.ipynb
quickstart/celebA/: celebA_dfr.py  celebA_eiil.py  celebA_jtt.py  celebA_pde.py  celebA_spare.py  celebA_ssa.py
quickstart/civil_comments/: civilcomments_erm.ipynb
quickstart/gradcam/: grad_cam.ipynb
quickstart/notebooks/: civilcomments_erm.ipynb  spuco_mnist_cluster.ipynb  spuco_mnist_dfr.ipynb  spuco_mnist_eiil.ipynb  spuco_mnist_groupdro.ipynb  spuco_mnist_jtt.ipynb  spuco_mnist_ssa.ipynb  waterbirds_erm.ipynb
quickstart/samples/: spuco_mnist_cluster.ipynb  spuco_mnist_dfr.ipynb  spuco_mnist_eiil.ipynb  spuco_mnist_groupdro.ipynb  spuco_mnist_jtt.ipynb  spuco_mnist_ssa.ipynb  waterbirds_erm.ipynb  waterbirds_groupdro.ipynb
quickstart/spuco_animals/: run.sh  spuco_animals_dfr.py  spuco_animals_eiil.py  spuco_animals_erm.py  spuco_animals_group_balance.py  spuco_animals_group_balance_aug.py  spuco_animals_groupdro.py  spuco_animals_jtt.py  spuco_animals_lff.py  spuco_animals_pde.py  spuco_animals_spare.py  spuco_animals_ssa.py  std_dev.sh
quickstart/spuco_mnist/: spuco_mnist_cluster.ipynb  spuco_mnist_cnc.ipynb  spuco_mnist_eiil.ipynb  spuco_mnist_erm.ipynb  spuco_mnist_george.py  spuco_mnist_group_balance.py  spuco_mnist_groupdro.ipynb  spuco_mnist_jtt.ipynb  spuco_mnist_spare.ipynb  spuco_mnist_spare.py  spuco_mnist_ssa.ipynb
quickstart/spuco_sun/: COMMANDS.md  commands_hanger.txt  commands_yihao.txt  spuco_sun_cnc.py  spuco_sun_dfr.py  spuco_sun_eiil.py  spuco_sun_erm.out  spuco_sun_erm.py  spuco_sun_erm_gb.py  spuco_sun_erm_investigate.py  spuco_sun_gb.py  spuco_sun_group_dro.py  spuco_sun_groupdro.out  spuco_sun_groupdro.py  spuco_sun_jtt.out  spuco_sun_jtt.py  spuco_sun_lff.py  spuco_sun_lrmix.py  spuco_sun_pde.py  spuco_sun_pgi.py  spuco_sun_spare.py  spuco_sun_ssa.py
quickstart/urbancars/: urbancars_dfr.py  urbancars_eiil.py  urbancars_erm.py  urbancars_gb.py  urbancars_gdro.py  urbancars_jtt.py  urbancars_pde.py  (+3 more)
(+206 files in other folders)
