[metadata]
name = spuco
version = "1.0.3"
author = Siddharth Joshi
author_email = sjoshi804@cs.ucla.edu
description = SpuCo is a Python package developed to further research to address spurious correlations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BigML-CS-UCLA/SpuCo
project_urls =
    Bug Tracker = https://github.com/BigML-CS-UCLA/SpuCo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src